refactoring / title with version number

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,7 @@
 <div id="content">
+  <h1>Box Fighter v0.01</h1>
   <canvas id="game" width="1024px" height="500px"></canvas>
   <div>
-    {{ game.dt }}
+    {{ game.gameTime }}
   </div>
 </div>
