filter method for elements that are on screen for performance issues // scene transition with delay

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -4,4 +4,7 @@
   <div>
     {{ game.gameTime }}
   </div>
+  <div>
+    Elements on screen: {{ game.gameArea.elementsOnCamera().length }}
+  </div>
 </div>
