--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,5 @@
 <div id="content">
-  <h1>Box Fighter v0.21</h1>
+  <h1>Box Fighter v0.23</h1>
   <canvas id="game" width="1024px" height="500px"></canvas>
   <div>
     {{ game.gameTime }}
@@ -11,5 +11,10 @@
     <span *ngFor="let element of game.gameArea.elementsOnCamera(); let last = last">
       {{ element.type }}{{ !last ? "," : "" }}
     </span>
+    <div style="font-size: 20px; color: dodgerblue">
+      <span *ngFor="let element of game.gameArea.getPlayer().elements; let last = last">
+      {{ element.type }}{{ !last ? "," : "" }}
+    </span>
+    </div>
   </div>
 </div>
