--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,8 +1,15 @@
 <div id="content">
-  <h1>Box Fighter v0.23</h1>
+  <h1>Box Fighter v0.1.25</h1>
   <canvas id="game" width="1024px" height="500px"></canvas>
   <div>
     {{ game.gameTime }}
   </div>
-
+  <div>
+    <div>
+      Elements on screen: {{ game.gameArea.elementsOnCamera().length }}
+    </div>
+    <span *ngFor="let element of game.gameArea.elementsOnCamera(); let last = last">
+      {{ element.type }}{{ !last ? "," : "" }}
+    </span>
+  </div>
 </div>
