--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,12 +1,16 @@
 <div id="content">
   <h1>Box Fighter v0.3.0</h1>
   <canvas id="game" width="1024px" height="500px"></canvas>
-  <div>
-    {{ game.gameTime }}
-  </div>
-  <div>
+  <canvas id="static" width="1024px" height="500px"></canvas>
+  <div id="game-info">
     <div>
-      Elements on screen: {{ game.gameArea.elementsOnCamera().length }}
+      {{ game.gameTime }}
+    </div>
+    <div>
+      <div>
+        Elements on screen: {{ game.gameArea.elementsOnCamera().length }}
+      </div>
     </div>
   </div>
+
 </div>
